Tugas_1/style.css
.grid-container{
    height: 97vh;
    display: grid;
    grid-template-columns: [first] 33% [second] 33% [third] auto [end] auto;
    /* grid-template-rows: [start] 16.6% [row2] 16.6% [row3] 16.6% [row4] 16.6% [row5] 16.6% [row6] auto; */
    grid-auto-rows: minmax(100px, auto);
}
.text-center{
    text-align: center;
}
.text-white{
    color: #fff;
}
.bg-biru-tua{
    background-color: #0d6efd;
    border: 1px solid #000;
    grid-area: auto / auto / span 3 / span 1;
}
.bg-kuning{
    background-color: #ffc107;
    border: 1px solid #000;
    grid-area: 4 / auto / span 1 / span 1;
}
.bg-merah{
    background-color: #dc3545;
    border: 1px solid #000;
    grid-area: 5 / auto / span 1 / span 1;
}
.bg-hijau{
    background-color: #198754;
    border: 1px solid #000;
    grid-area: 6 / auto / span 1 / span 1;
}
.bg-hitam{
    background-color: #000;
    border: 1px solid #000;
    grid-area: auto / auto / span 1 / span 3;
}
.bg-coklat{
    background-color: #964B00;
    border: 1px solid #000;
    grid-area: auto / auto / span 2 / span 1;
}
.bg-ungu{
    background-color: #6f42c1;
    border: 1px solid #000;
    grid-area: 4 / 2 / span 2 / span 1;
}
.bg-pink{
    background-color: #d63384;
    border: 1px solid #000;
    grid-area: 2 / 4 / auto1 / auto;
}
.bg-putih{
    background-color: #fff;
    border: 1px solid #000;
    grid-area: 2 / 3 / span 3 / span 1;
}
.bg-biru-muda{
    background-color: #0dcaf0;
    border: 1px solid #000;
    grid-area: 3 / 4 / span 3 / span 1;
}
.bg-orange{
    background-color: #fd7e14;
    border: 1px solid #000;
    grid-area: 6 / 2 / span 1 / span 1;
}
.bg-abu{
    background-color: #6c757d;
    border: 1px solid #000;
    grid-area: 5 / 3 / span 2 / span 2;
}

